# firebase-alternate-send-sms

./: settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/antinna/lethelpsms/: MainActivity.kt
app/src/main/java/com/antinna/lethelpsms/api/: BackendApiClient.kt  GrpcClient.kt
app/src/main/java/com/antinna/lethelpsms/service/: BootCompletedReceiver.kt  RelayForegroundService.kt  SmsFirebaseMessagingService.kt
app/src/main/java/com/antinna/lethelpsms/worker/: RegisterDeviceWorker.kt  SmsSenderWorker.kt
app/src/main/proto/: sms_relay.proto
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app_server/: Cargo.toml  build.rs
app_server/proto/: sms_relay.proto
app_server/src/: main.rs  service.rs
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
