[package]
name = "app_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
futures = "0.3"

[build-dependencies]
tonic-build = "0.10"
